--- a/localisation/KAS_l_english.yml
+++ b/localisation/KAS_l_english.yml
@@ -62,33 +62,33 @@
  KAS_nuclear_scientist:0 "Odri Kreezunrith"
  KAS_rocket_scientist:0 "Uklesi Crerle"
  
- kas.1.t:0 "Stip or War" #FRANCE GETS the Eventc
- kas.1.d:0 "Long Ignoble Speach or something"
- kas.1.a:0 "kash Demand France Land" #France Accepts
- kas.1.b:0 "Kash Demand France Land" #France Refuses
- kas.2.t:0 "France Gives Strip" #KAsh GETS the Eventc
- kas.2.d:0 "Long speach or sumthin"
- kas.2.a:0 "Good we didnt want to fight"
+ kas.1.t:0 "Strip or War" #FRANCE GETS the Eventc
+ kas.1.d:0 "'For too long the feet of the Europeans have tread upon our sacred land. No more! The shall return what rightfully belongs to us or will face dreadful consequences!' -Petela Witmeri, First President of Kashvan."
+ kas.1.a:0 "France Accepts" #France Accepts
+ kas.1.b:0 "France Accepts" #France Refuses
+ kas.2.t:0 "France Cedes the Strip" #KAsh GETS the Eventc
+ kas.2.d:0 "Instead of plunging the world into another blood and unneccessary conflict, France has wisely decided to return the Kobaulashlivi Strip to its rightful owners, Kashvan."
+ kas.2.a:0 "To avoid conflict is best."
  kas.4.t:0 "France Refuses" #KAsh GETS the Eventc
- kas.4.d:0 "We meet on the field of battle or sumthing"
- kas.4.a:0 "Nothing like a little violence cant solve"
+ kas.4.d:0 "The rude and unprofessional reply of the French ambassador to our claim indicates that France would rather have their blood spilled than listen to reason."
+ kas.4.a:0 "Nothing like a little violence can't solve"
  
- kas.6.t:0 "Vassal or war" #Aka GETS the Eventc
- kas.6.d:0 "Long Ignoble Speach or something"
- kas.6.a:0 "Kash Demand Aka Land" #AkaAka Accepts
- kas.6.b:0 "Kash Demand Aka Land" #Aka Refuses
- kas.8.t:0 "Aka is  vassalized" #KAsh GETS the Eventc
- kas.8.d:0 "Long speach or sumthin"
- kas.8.a:0 "Good we didnt want to fight"
- kas.10.t:0 "Aka Refuses" #KAsh GETS the Eventc
- kas.10.d:0 "We meet on the field of battle or sumthing"
- kas.10.a:0 "Nothing like a little violence cant solve"
+ kas.6.t:0 "Vassalization or War" #Aka GETS the Eventc
+ kas.6.d:0 "Akamatuli has long been the home of wild and ferocious tribes. We will give them the opportunity to join our glorious union and see the light of civilization!"
+ kas.6.a:0 "Kashvan demands our submission." #AkaAka Accepts
+ kas.6.b:0 "Shall we accept the Kashvani offer?" #Aka Refuses
+ kas.8.t:0 "Akamatuli Accepts" #KAsh GETS the Eventc
+ kas.8.d:0 "Our common background and shared blood are what is most important. We shall join with the Kashvan people and lift all our peoples."
+ kas.8.a:0 "Good we didnt wan't to fight"
+ kas.10.t:0 "Akamatuli Refuses" #KAsh GETS the Eventc
+ kas.10.d:0 "NEVER!"
+ kas.10.a:0 "Then blood shall be spilled."
  
  kas.20.t:0 "Language Reforms" #KAsh GETS the Eventc
- kas.20.d:0 "We have two main Languages Similar to eachother"
+ kas.20.d:0 "Kobash-u and Macehua-a'gan are generally mutually intelligible languages, but some worry that either one or the other must become dominant. To choose one would ease the burden on the newly founded government, but might alienate those who do not speak that language."
  kas.20.a:0 "Is it wrong to have two?" #Canon
- kas.20.b:0 "Koba" 
- kas.20.c:0 "Mace" 
+ kas.20.b:0 "Kobash-u" 
+ kas.20.c:0 "Macehua-a'gan" 
  #Ideas
  kas_recently_unified_1:0 "Recently Unified"
  kas_recently_unified_1_desc:0 "As with any new nation, we're experiencing some of the instabilities of trying to establish unified laws and governance."
@@ -107,25 +107,25 @@
  kas_nationalized_workforce:0 "Conscripted Workforce"
  kas_nationalized_workforce_desc:0 "An Alternative for Military Service is to be drafted for National Work Projects"
  kas_combined_legislature:0 "Combined Legislature"
- kas_combined_legislature_desc:0 "TBD"
+ kas_combined_legislature_desc:0 "By constructing a new set of government buildings, especially a new Peoples House where our representatives can meet, we can improve our government's legitimacy in the eyes of the people."
  kas_road_maintenence:0 "Road Construction"
- kas_road_maintenence_desc:0 "TBD"
+ kas_road_maintenence_desc:0 "We must construct roads to ensure that goods can be taken to factories."
  kas_national_railway:0 "Railway Integration Act 1937"
  kas_national_railway_desc:0 "The Railway Integration Act 1937 is a Decree the Great Leader, that was designed to standardise railway tracks.  It mandated that the track gauge – which was the distance between the two running rails' inner faces 1,372 mm aka Four foot six inch to be the standard for Kasvan and for all railways to be converted to such. to beter integrate into each other as a compromise between Kobalashivs 1000mm Gauge and Macealashivi 1520mm."
  kas_primary_research:0 "Mandatory Primary School"
- kas_primary_research_desc:0 "TBD"
+ kas_primary_research_desc:0 "All children from the age of 7 shall attend primary school until they have completed a minimum of 5 years of education."
  kas_military_research:0 "Military Design Bureau"
- kas_military_research_desc:0 "TBD"
+ kas_military_research_desc:0 "A centralized design bureau will help us come up with our own designs and save money."
  kas_doctrine_research:0"Doctrine Drills"
- kas_doctrine_research_desc:0 "TBD"
- kas_planning_research:0 "Planning Speed"
- kas_planning_research_desc:0 "TBD"
+ kas_doctrine_research_desc:0 "Only knowledge of doctrine will allow commanders in the field to accurately apply the lessons of the war colleges on the battlefield."
+ kas_planning_research:0 "Central Planning Commission"
+ kas_planning_research_desc:0 "The Central Planning Commission will improve the efficiency of our military plans, making it faster to produce them."
  kas_recovery_research:0 "Improved Medics"
- kas_recovery_research_desc:0 "TBD"
+ kas_recovery_research_desc:0 "If we are to utilize men as weapons we will need to get them back into shape and back to the fight after being wounded."
  kas_trade_school_efficiency:0 "Trade Schools"
  kas_trade_school_efficiency_desc:0 "Wonder science is meaningless if we dont have the people trained to actually build it"
- kas_turtles:0 "Iron Turtle"
- kas_turtles_desc:0 "TBD"
+ kas_turtles:0 "Iron Tortoise"
+ kas_turtles_desc:0 "Fortifications will ensure the strength and safety of our nation. Our national fortification building project will enable us to build them more easily."
  
  kas_unification_trouble:0 "Unification Troubles"
  kas_unification_trouble_desc:0 "We've been a unified nation for only a year now. We need to forge better ties between our two halves if we're to succeed in this world."
