--- a/localisation/replace/aml_state_names_l_english.yml
+++ b/localisation/replace/aml_state_names_l_english.yml
@@ -345,9 +345,9 @@
  STATE_1243:0 "Opá"
  STATE_1244:0 "Nouvelle Bretagne"
  STATE_1245:0 "Tlaqua"
- STATE_1246:0 "Kingdom of Saguenay"
+ STATE_1246:0 "Nueltin"
  STATE_1247:0 "Salah al-Din"
- STATE_1248:0 "Inka Name"
+ STATE_1248:0 "Q'umirmayu"
  STATE_1249:0 "Muru"
  STATE_1250:0 "Namruj"
  STATE_1251:0 "Parez"
