Tag Change, KAS fixes

--- a/localisation/KAS_l_english.yml
+++ b/localisation/KAS_l_english.yml
@@ -166,7 +166,7 @@
  kas_ban_politics:0 "Ban Political Parties"
  kas_ban_politics_desc:0 "If our people are to benefit from Communism we must prevent them from being lead astray by dangerous foreign ideals."
  
- kas_seize_forign_assets:0 "Seize Foriegn Property"
+ kas_seize_forign_assets:0 "Seize Foreign Property"
  kas_seize_forign_assets_desc:0 " Foreign capitalists must not be able to act with impunity in our great nation."
  
  kas_stratocracy:0 "A Military_Republic"
