--- a/localisation/replace/aml_countries_l_english.yml
+++ b/localisation/replace/aml_countries_l_english.yml
@@ -746,21 +746,21 @@
  MCF_neutrality_ADJ:0 "Mecafarian"
  MCF_communism_ADJ:0 "Mecafarian"
  MCF_monarchism_ADJ:0 "Mecafarian"
- LTH_fascism:0 "Lothia"
- LTH_fascism_DEF:0 "Lothia"
- LTH_democratic:0 "Republic of Lothia"
- LTH_democratic_DEF:0 "Republic of Lothia"
- LTH_neutrality:0 "Lothia"
- LTH_neutrality_DEF:0 "Lothia"
- LTH_monarchism:0 "Lothian Kingdom"
- LTH_monarchism_DEF:0 "the Lothian Kingdom"
- LTH_communism:0 "Peoples Republic of Lothia"
- LTH_communism_DEF:0 "the Peoples Republic of Lothia"
- LTH_fascism_ADJ:0 "Lothian"
- LTH_democratic_ADJ:0 "Lothian"
- LTH_neutrality_ADJ:0 "Lothian"
- LTH_communism_ADJ:0 "Lothian"
- LTH_monarchism_ADJ:0 "Lothian"
+ MRR_fascism:0 "Morrothia"
+ MRR_fascism_DEF:0 "Morrothian State"
+ MRR_democratic:0 "Republic of Morrothia"
+ MRR_democratic_DEF:0 "the Republic of Morrothia"
+ MRR_neutrality:0 "Morrothia"
+ MRR_neutrality_DEF:0 "Morrothia"
+ MRR_monarchism:0 "Morrothian Kingdom"
+ MRR_monarchism_DEF:0 "the Morrothian Kingdom"
+ MRR_communism:0 "Peoples Republic of Morrothia"
+ MRR_communism_DEF:0 "the Peoples Republic of Morrothia"
+ MRR_fascism_ADJ:0 "Morrothian"
+ MRR_democratic_ADJ:0 "Morrothian"
+ MRR_neutrality_ADJ:0 "Morrothian"
+ MRR_communism_ADJ:0 "Morrothian"
+ MRR_monarchism_ADJ:0 "Morrothian"
  NFR_fascism:0 "New Frisia"
  NFR_fascism_DEF:0 "New Frisia"
  NFR_democratic:0 "Republic of New Frisia"
