--- a/localisation/replace/aml_countries_l_english.yml
+++ b/localisation/replace/aml_countries_l_english.yml
@@ -761,21 +761,21 @@
  MRR_neutrality_ADJ:0 "Morrothian"
  MRR_communism_ADJ:0 "Morrothian"
  MRR_monarchism_ADJ:0 "Morrothian"
- NFR_fascism:0 "New Frisia"
- NFR_fascism_DEF:0 "New Frisia"
- NFR_democratic:0 "Republic of New Frisia"
- NFR_democratic_DEF:0 "Republic of New Frisia"
- NFR_neutrality:0 "New Frisia"
- NFR_neutrality_DEF:0 "New Frisia"
- NFR_monarchism:0 "Kingdom of New Frisia"
- NFR_monarchism_DEF:0 "the Kingdom of New Frisia"
- NFR_communism:0 "Peoples Republic of New Frisia"
- NFR_communism_DEF:0 "the Peoples Republic of New Frisia"
- NFR_fascism_ADJ:0 "New Frisian"
- NFR_democratic_ADJ:0 "New Frisian"
- NFR_neutrality_ADJ:0 "New Frisian"
- NFR_communism_ADJ:0 "New Frisian"
- NFR_monarchism_ADJ:0 "New Frisian"
+ HGL_fascism:0 "Hageleilanden"
+ HGL_fascism_DEF:0 "Hageleilanden"
+ HGL_democratic:0 "Republic of Hageleilanden"
+ HGL_democratic_DEF:0 "Republic of Hageleilanden"
+ HGL_neutrality:0 "Hageleilanden"
+ HGL_neutrality_DEF:0 "Hageleilanden"
+ HGL_monarchism:0 "Kingdom of Hageleilanden"
+ HGL_monarchism_DEF:0 "the Kingdom of Hageleilanden"
+ HGL_communism:0 "Peoples Republic of Hageleilanden"
+ HGL_communism_DEF:0 "the Peoples Republic of Hageleilanden"
+ HGL_fascism_ADJ:0 "Hageleilander"
+ HGL_democratic_ADJ:0 "Hageleilander"
+ HGL_neutrality_ADJ:0 "Hageleilander"
+ HGL_communism_ADJ:0 "Hageleilander"
+ HGL_monarchism_ADJ:0 "Hageleilander"
  NAA_fascism:0 "Varangia"
  NAA_fascism_DEF:0 "Varangia"
  NAA_democratic:0 "Varangia"
