--- a/localisation/replace/aml_state_names_l_english.yml
+++ b/localisation/replace/aml_state_names_l_english.yml
@@ -259,7 +259,7 @@
  STATE_1157:0 "Scotia Archipelago"
  STATE_1158:0 "Storfisk Islands"
  STATE_1159:0 "Terre de Chanson"
- STATE_1160:0 "Val Islands"
+ STATE_1160:0 "Walvislanden"
  STATE_1161:0 "Balteos Islands"
  STATE_1162:0 "Flueflekk Islands"
  STATE_1163:0 "Ker Ys"
