--- a/localisation/replace/aml_victory_points_l_english.yml
+++ b/localisation/replace/aml_victory_points_l_english.yml
@@ -98,9 +98,9 @@
  VICTORY_POINTS_14262:0 "Stuarts Town"
  VICTORY_POINTS_13944:0 "Thatcherton" #Would be renamed after Margaret Thatcher leaves office
  VICTORY_POINTS_14062:0 "Montaussonne"
- VICTORY_POINTS_14115:0 "Ny-Malmø"
- VICTORY_POINTS_14060:0 "Cesepaglia"
- VICTORY_POINTS_14058:0 "Nythrengroth"
+ VICTORY_POINTS_14115:0 "Barentsz"
+ VICTORY_POINTS_14060:0 "Aveiro do Sur"
+ VICTORY_POINTS_14058:0 "Nyhaugesund"
  VICTORY_POINTS_13975:0 "Zotlecht" #Dutch
  VICTORY_POINTS_13985:0 "Götkreis" #Dutch
  VICTORY_POINTS_13969:0 "Liesberg" #Dutch
