--- a/localisation/replace/aml_state_names_l_english.yml
+++ b/localisation/replace/aml_state_names_l_english.yml
@@ -250,16 +250,16 @@
  STATE_1148:0 "Hogland Archipelago"
  STATE_1149:0 "Avahya"
  STATE_1150:0 "Panghuzitz Island"
- STATE_1151:0 "Schuyler Islands"
- STATE_1152:0 "New Svealand"
- STATE_1153:0 "Strandviken"
- STATE_1154:0 "New Gothenland"
- STATE_1155:0 "Christinasland"
+ STATE_1151:0 "Scheuler Islands"
+ STATE_1152:0 "New Wangerland"
+ STATE_1153:0 "Bountiful Coast"
+ STATE_1154:0 "Goetheland"
+ STATE_1155:0 "Angerfiel"
  STATE_1156:0 "Arrowhead Islands"
  STATE_1157:0 "Scotia Archipelago"
- STATE_1158:0 "Storfisk Islands"
- STATE_1159:0 "Terre de Chanson"
- STATE_1160:0 "Walvislanden"
+ STATE_1158:0 "Bengerland"
+ STATE_1159:0 "Hosachen"
+ STATE_1160:0 "Walvis Islands"
  STATE_1161:0 "Balteos Islands"
  STATE_1162:0 "Flueflekk Islands"
  STATE_1163:0 "Ker Ys"
@@ -271,9 +271,9 @@
  STATE_1169:0 "Mayda"
  STATE_1170:0 "Rodrigo"
  STATE_1171:0 "Sannikov island"
- STATE_1172:0 "Pays des Fjords" 
- STATE_1173:0 "Montglaciale" 
- STATE_1174:0 "Mecafarie"
+ STATE_1172:0 "Fjordland" 
+ STATE_1173:0 "Grauberg" 
+ STATE_1174:0 "Mekafaland"
  STATE_1175:0 "Hi'e"
  STATE_1176:0 "Houkehaka"
  STATE_1177:0 "Houla'ana"
