--- a/localisation/KAS_l_english.yml
+++ b/localisation/KAS_l_english.yml
@@ -169,7 +169,7 @@
  kas_seize_forign_assets:0 "Seize Foreign Property"
  kas_seize_forign_assets_desc:0 " Foreign capitalists must not be able to act with impunity in our great nation."
  
- kas_stratocracy:0 "A Military_Republic"
+ kas_stratocracy:0 "A Military Republic"
  kas_stratocracy_desc:0 "Clearly, the best way to ensure our success moving forward is to have the primacy of the military as the enforcement organ of the state"
  
  kas_confirm_stratocracy:0 "Military Primacy"
