ELYSIA Elysealand Loc Update
no more swedish and french remnants, Elysealand country name updated to fit with the rest of HOI

--- a/localisation/replace/aml_victory_points_l_english.yml
+++ b/localisation/replace/aml_victory_points_l_english.yml
@@ -81,34 +81,34 @@
  VICTORY_POINTS_16515:0 "Manoa"
  
  #Elysia+Antarctica
- VICTORY_POINTS_14206:0 "Völkdenz"
- VICTORY_POINTS_14125:0 "Winternacht"
- VICTORY_POINTS_14198:0 "Linenburg"
- VICTORY_POINTS_14229:0 "Rheinmünster"
+ VICTORY_POINTS_14206:0 "Denzen"  #German
+ VICTORY_POINTS_14125:0 "Schapperkamp"   #German
+ VICTORY_POINTS_14198:0 "Linenburg"     #German
+ VICTORY_POINTS_14229:0 "Alamannsdorf"  #German
  VICTORY_POINTS_13131:0 "Muru'ona"
  VICTORY_POINTS_10769:0 "Monterrey"
  VICTORY_POINTS_12835:0 "Nuevo Laredo"
  VICTORY_POINTS_10795:0 "ad-Duwaym"
  VICTORY_POINTS_1960:0 "Nyala"
- VICTORY_POINTS_14305:0 "Sveaborg"
- VICTORY_POINTS_14007:0 "Strandviken"
- VICTORY_POINTS_13991:0 "Gothenborg"
- VICTORY_POINTS_14015:0 "Nya Vasa"
- VICTORY_POINTS_13993:0 "Christina"
+ VICTORY_POINTS_14305:0 "Neu Marx"
+ VICTORY_POINTS_14007:0 "Welk"
+ VICTORY_POINTS_13991:0 "Liebknecht"
+ VICTORY_POINTS_14015:0 "Odger"
+ VICTORY_POINTS_13993:0 "Engelshafen"
  VICTORY_POINTS_14262:0 "Stuarts Town"
  VICTORY_POINTS_13944:0 "Thatcherton" #Would be renamed after Margaret Thatcher leaves office
- VICTORY_POINTS_14062:0 "Montaussonne"
+ VICTORY_POINTS_14062:0 "1848er-Dorf"
  VICTORY_POINTS_14115:0 "Barentsz"
  VICTORY_POINTS_14060:0 "Aveiro do Sur"
  VICTORY_POINTS_14058:0 "Nyhaugesund"
- VICTORY_POINTS_13975:0 "Zotlecht" #Dutch
- VICTORY_POINTS_13985:0 "Götkreis" #Dutch
- VICTORY_POINTS_13969:0 "Liesberg" #Dutch
- VICTORY_POINTS_16448:0 "Drachlen" #French
- VICTORY_POINTS_16451:0 "Mauben"    #French
- VICTORY_POINTS_16437:0 "Naumbeuren"    #French
- VICTORY_POINTS_14160:0 "Padersborn"
- VICTORY_POINTS_14127:0 "Arverion"
+ VICTORY_POINTS_13975:0 "Zötten" #German
+ VICTORY_POINTS_13985:0 "Gottkreis" #German
+ VICTORY_POINTS_13969:0 "Liesburg" #German
+ VICTORY_POINTS_16448:0 "Herrnkarienburg" #French
+ VICTORY_POINTS_16451:0 "Märn"    #French
+ VICTORY_POINTS_16437:0 "Hamdönt"    #French
+ VICTORY_POINTS_14160:0 "Padersborn"    #German
+ VICTORY_POINTS_14127:0 "Märzdorf"
  VICTORY_POINTS_13353:0 "Naukasi" 
  VICTORY_POINTS_13354:0 "Tafutumu" 
  VICTORY_POINTS_13355:0 "A'upuala" 
