Kashvan Rules Rename Hepedle to Atlantis

--- a/localisation/aml_game_rules_l_english.yml
+++ b/localisation/aml_game_rules_l_english.yml
@@ -12,6 +12,8 @@
  HOU_AI_BEHAVIOR:0 "@HOU Republic of Houpo'e"
  TRS_AI_BEHAVIOR:0 "@TRS Trynsuyin"
  KLK_AI_BEHAVIOR:0 "@KLK Kalari"
+ KAS_AI_BEHAVIOR:0 "@KAS Kashvan"
+ 
  #Atlantis Rules
  RULE_OPTION_COMMUNIST_ATL_AI_DESC:0 "Atlantis will try to reform itself into a communist state and ally itself with the Soviet Union or another major Communist State"
  RULE_OPTION_DEMOCRATIC_HISTORICAL_ATL_AI_DESC:0 "Atlantis will try to curtail the criminal underworld to join the allies and stave the rise of fascism "
@@ -27,7 +29,7 @@
  RULE_MONARCHIST_MUU_AI_DESC:0 "The Federal Republic of Muu will attempt to restore its king and avoid taking part in future wars."
  RULE_FASCIST_MUU_AI_DESC:0 "Fasci Descriptor soon"
 
- #Blue Mu Rules NONE OF THIS WORKS
+ #Blue Mu Rules 
  RULE_OPTION_SOVIET_COMMUNIST:0 "Soviet Communism"
  RULE_OPTION_SOVIET_COMMUNIST_FMU_AI_DESC:0 "The Friestaat of Muu will try to install soviet style communism"
  RULE_OPTION_MUAN_COMMUNIST:0 "Muan Communism"
@@ -50,7 +52,7 @@
  RULE_OPTION_PRJ_ISLAM_THEOCRACY:0 "Islamic State"
  RULE_OPTION_PRJ_ISLAM_THEOCRACY_AI_DESC:0 "The Arabs will revolt and try to establish a Jihadist state in Yohannia"
  RULE_OPTION_PRJ_CHRISTIAN_THEOCRACY:0 "Christian Theocracy"
- RULE_OPTION_PRJ_CHRISTIAN_THEOCRACY_AI_DESC:0 "The christian Plurality will revolt and try to establish the true stae of Prester John"
+ RULE_OPTION_PRJ_CHRISTIAN_THEOCRACY_AI_DESC:0 "The christian Plurality will revolt and try to establish the true state of Prester John"
  RULE_OPTION_PRJ_JEWISH_THEOCRACY:0 "A Jewish Home"
  RULE_OPTION_PRJ_JEWISH_THEOCRACY_AI_DESC:0 "The Jews while outnumbered believe that with the situation In europe the must rise up and create a Jewish state in the south"
  RULE_OPTION_PRJ_COMMUNISM:0 "Communism"
@@ -81,3 +83,15 @@
  #Kalari and the Mandabrony
  KLK_AI_RANDOM_HISTORICAL:0 "Historical"
  KLK_AI_RANDOM_HISTORICAL_DESC:0 "Kalari will secumb to Mandalism and spread it across the Lemurian Continent. If Kumari falls to mandalism, Kalari will try to be absorbed into Kumari"
+ #Kas
+ KAS_AI_RANDOM_HISTORICAL:0 "Historical"
+ RULE_HISTORICAL_KAS_AI_DESC:0 "Kashvan will try continue its troubled formation and go on its warpath against France and British Lemuria."
+ 
+ KAS_AI_RANDOM_DEMOCRACY:0 "Democracy"
+ KAS_AI_RANDOM_DEMOCRACY_DESC:0 "Bla blah Confederacy Good, No wars"
+ 
+ KAS_AI_RANDOM_JUNTA:0 "Military Junta"
+ KAS_AI_RANDOM_JUNTA_DESC:0 "Kashvan will give up on a Military Republic and rule by force to fight France and British Lemuria"
+ 
+ KAS_AI_RANDOM_COMMUNISM:0 "Communism"
+ KAS_AI_RANDOM_COMMUNISM_DESC:0 "Kashvan will try to turn Communist by going down the required path"
