--- a/localisation/replace/aml_countries_l_english.yml
+++ b/localisation/replace/aml_countries_l_english.yml
@@ -1941,21 +1941,21 @@
  RWN_neutrality_ADJ:0 "Rawaenganuipoan"
  RWN_communism_ADJ:0 "Rawaenganuipoan"
  RWN_monarchism_ADJ:0 "Rawaenganuipoan"
- AME_fascism:0 "Hepedleseran Empire"
- AME_fascism_DEF:0 "the Hepedleseran Empire"
- AME_democratic:0 "Republic of Hepedleseran"
- AME_democratic_DEF:0 "the Republic of Hepedleseran"
- AME_neutrality:0 "Republic of Hepedleseran"
- AME_neutrality_DEF:0 "the Republic of Hepedleseran"
- AME_monarchism:0 "Kingdom of Hepedleseran"
- AME_monarchism_DEF:0 "the Kingdom of Hepedleseran"
- AME_communism:0 "Peoples Republic of Hepedleseran"
- AME_communism_DEF:0 "the Peoples Republic of Hepedleseran"
- AME_fascism_ADJ:0 "Hepedleseran"
- AME_democratic_ADJ:0 "Hepedleseran"
- AME_neutrality_ADJ:0 "Hepedleseran"
- AME_communism_ADJ:0 "Hepedleseran"
- AME_monarchism_ADJ:0 "Hepedleseran"
+ AME_fascism:0 "New Atlantean Empire"
+ AME_fascism_DEF:0 "the New Atlantean Empire"
+ AME_democratic:0 "Republic of New Atlanits"
+ AME_democratic_DEF:0 "the Republic of New Atlanits"
+ AME_neutrality:0 "Republic of New Atlanits"
+ AME_neutrality_DEF:0 "the Republic of New Atlanits"
+ AME_monarchism:0 "Kingdom of New Atlanits"
+ AME_monarchism_DEF:0 "the Kingdom of New Atlanits"
+ AME_communism:0 "Peoples Republic of New Atlanits"
+ AME_communism_DEF:0 "the Peoples Republic of New Atlanits"
+ AME_fascism_ADJ:0 "New Atlantean"
+ AME_democratic_ADJ:0 "New Atlantean"
+ AME_neutrality_ADJ:0 "New Atlantean"
+ AME_communism_ADJ:0 "New Atlantean"
+ AME_monarchism_ADJ:0 "New Atlantean"
  NIL_fascism:0 "Nilotian Empire"
  NIL_fascism_DEF:0 "the Nilotian Empire"
  NIL_democratic:0 "Republic of Nilotia"
