--- a/localisation/replace/aml_countries_l_english.yml
+++ b/localisation/replace/aml_countries_l_english.yml
@@ -761,21 +761,21 @@
  MRR_neutrality_ADJ:0 "Morrothian"
  MRR_communism_ADJ:0 "Morrothian"
  MRR_monarchism_ADJ:0 "Morrothian"
- HGL_fascism:0 "Hageleilanden"
- HGL_fascism_DEF:0 "Hageleilanden"
- HGL_democratic:0 "Republic of Hageleilanden"
- HGL_democratic_DEF:0 "Republic of Hageleilanden"
- HGL_neutrality:0 "Hageleilanden"
- HGL_neutrality_DEF:0 "Hageleilanden"
- HGL_monarchism:0 "Kingdom of Hageleilanden"
- HGL_monarchism_DEF:0 "the Kingdom of Hageleilanden"
- HGL_communism:0 "Peoples Republic of Hageleilanden"
- HGL_communism_DEF:0 "the Peoples Republic of Hageleilanden"
- HGL_fascism_ADJ:0 "Hageleilander"
- HGL_democratic_ADJ:0 "Hageleilander"
- HGL_neutrality_ADJ:0 "Hageleilander"
- HGL_communism_ADJ:0 "Hageleilander"
- HGL_monarchism_ADJ:0 "Hageleilander"
+ HGL_fascism:0 "National-Socialist Elysia" #Hageleilanden in Dutch
+ HGL_fascism_DEF:0 "National-Socialist Elysia"
+ HGL_democratic:0 "Republic of Dutch Elysia"
+ HGL_democratic_DEF:0 "Republic of Dutch Elysia"
+ HGL_neutrality:0 "Dutch Elysia"
+ HGL_neutrality_DEF:0 "Dutch Elysia"
+ HGL_monarchism:0 "Kingdom of Elysia"
+ HGL_monarchism_DEF:0 "the Kingdom of Elysia"
+ HGL_communism:0 "Peoples Republic of Elysia"
+ HGL_communism_DEF:0 "the Peoples Republic of Elysia"
+ HGL_fascism_ADJ:0 "Elysian"
+ HGL_democratic_ADJ:0 "Dutch Elysian"
+ HGL_neutrality_ADJ:0 "Dutch Elysian"
+ HGL_communism_ADJ:0 "Elysian"
+ HGL_monarchism_ADJ:0 "Elysian"
  NAA_fascism:0 "Varangia"
  NAA_fascism_DEF:0 "Varangia"
  NAA_democratic:0 "Varangia"
@@ -1941,21 +1941,21 @@
  RWN_neutrality_ADJ:0 "Rawaenganuipoan"
  RWN_communism_ADJ:0 "Rawaenganuipoan"
  RWN_monarchism_ADJ:0 "Rawaenganuipoan"
- AME_fascism:0 "New Atlantean Empire"
- AME_fascism_DEF:0 "the New Atlantean Empire"
- AME_democratic:0 "Republic of New Atlanits"
- AME_democratic_DEF:0 "the Republic of New Atlanits"
- AME_neutrality:0 "Republic of New Atlanits"
- AME_neutrality_DEF:0 "the Republic of New Atlanits"
- AME_monarchism:0 "Kingdom of New Atlanits"
- AME_monarchism_DEF:0 "the Kingdom of New Atlanits"
- AME_communism:0 "Peoples Republic of New Atlanits"
- AME_communism_DEF:0 "the Peoples Republic of New Atlanits"
- AME_fascism_ADJ:0 "New Atlantean"
- AME_democratic_ADJ:0 "New Atlantean"
- AME_neutrality_ADJ:0 "New Atlantean"
- AME_communism_ADJ:0 "New Atlantean"
- AME_monarchism_ADJ:0 "New Atlantean"
+ AME_fascism:0 "Kryosian Empire"
+ AME_fascism_DEF:0 "the Kryosian Empire"
+ AME_democratic:0 "Republic of Kryosia"
+ AME_democratic_DEF:0 "the Republic of Kryosia"
+ AME_neutrality:0 "Republic of Kryosia"
+ AME_neutrality_DEF:0 "the Republic of Kryosia"
+ AME_monarchism:0 "Kingdom of Kryosia"
+ AME_monarchism_DEF:0 "the Kingdom of Kryosia"
+ AME_communism:0 "Peoples Republic of Kryosia"
+ AME_communism_DEF:0 "the Peoples Republic of Kryosia"
+ AME_fascism_ADJ:0 "Kryosian"
+ AME_democratic_ADJ:0 "Kryosian"
+ AME_neutrality_ADJ:0 "Kryosian"
+ AME_communism_ADJ:0 "Kryosian"
+ AME_monarchism_ADJ:0 "Kryosian"
  NIL_fascism:0 "Nilotian Empire"
  NIL_fascism_DEF:0 "the Nilotian Empire"
  NIL_democratic:0 "Republic of Nilotia"
