--- a/localisation/replace/aml_vanilla_state_names_l_english.yml
+++ b/localisation/replace/aml_vanilla_state_names_l_english.yml
@@ -1,5 +1,5 @@
 ﻿l_english:
- STATE_270:0 "Prometida"
+ STATE_270:0 "Verheisse"
  STATE_357:0 "Rhode Island"
  STATE_379:0 "Paiute"
  STATE_388:0 "Shoshone"
