--- a/localisation/replace/aml_countries_l_english.yml
+++ b/localisation/replace/aml_countries_l_english.yml
@@ -1941,21 +1941,21 @@
  RWN_neutrality_ADJ:0 "Rawaenganuipoan"
  RWN_communism_ADJ:0 "Rawaenganuipoan"
  RWN_monarchism_ADJ:0 "Rawaenganuipoan"
- AME_fascism:0 "Kryosian Empire"
- AME_fascism_DEF:0 "the Kryosian Empire"
- AME_democratic:0 "Republic of Kryosia"
- AME_democratic_DEF:0 "the Republic of Kryosia"
- AME_neutrality:0 "Republic of Kryosia"
- AME_neutrality_DEF:0 "the Republic of Kryosia"
- AME_monarchism:0 "Kingdom of Kryosia"
- AME_monarchism_DEF:0 "the Kingdom of Kryosia"
- AME_communism:0 "Peoples Republic of Kryosia"
- AME_communism_DEF:0 "the Peoples Republic of Kryosia"
- AME_fascism_ADJ:0 "Kryosian"
- AME_democratic_ADJ:0 "Kryosian"
- AME_neutrality_ADJ:0 "Kryosian"
- AME_communism_ADJ:0 "Kryosian"
- AME_monarchism_ADJ:0 "Kryosian"
+ KRY_fascism:0 "Kryosian Empire"
+ KRY_fascism_DEF:0 "the Kryosian Empire"
+ KRY_democratic:0 "Republic of Kryosia"
+ KRY_democratic_DEF:0 "the Republic of Kryosia"
+ KRY_neutrality:0 "Republic of Kryosia"
+ KRY_neutrality_DEF:0 "the Republic of Kryosia"
+ KRY_monarchism:0 "Kingdom of Kryosia"
+ KRY_monarchism_DEF:0 "the Kingdom of Kryosia"
+ KRY_communism:0 "Peoples Republic of Kryosia"
+ KRY_communism_DEF:0 "the Peoples Republic of Kryosia"
+ KRY_fascism_ADJ:0 "Kryosian"
+ KRY_democratic_ADJ:0 "Kryosian"
+ KRY_neutrality_ADJ:0 "Kryosian"
+ KRY_communism_ADJ:0 "Kryosian"
+ KRY_monarchism_ADJ:0 "Kryosian"
  NIL_fascism:0 "Nilotian Empire"
  NIL_fascism_DEF:0 "the Nilotian Empire"
  NIL_democratic:0 "Republic of Nilotia"
