Rules for thee but not for ME!
Watch as the smoke clears
The bodies in the streets
Your saviors have fallen
You brought this on yourself

--- a/localisation/aml_game_rules_l_english.yml
+++ b/localisation/aml_game_rules_l_english.yml
@@ -12,7 +12,8 @@
  HOU_AI_BEHAVIOR:0 "@HOU Republic of Houpo'e"
  TRS_AI_BEHAVIOR:0 "@TRS Trynsuyin"
  KLK_AI_BEHAVIOR:0 "@KLK Kalari"
- KAS_AI_BEHAVIOR:0 "@KAS Kashvan"
+ KAS_AI_BEHAVIOR:0 "@KAS Dual Emirate of Kashvan"
+ AVA_AI_BEHAVIOR:0 "@AVA Kingdom of Avhaya"
  
  #Atlantis Rules
  RULE_OPTION_COMMUNIST_ATL_AI_DESC:0 "Atlantis will try to reform itself into a communist state and ally itself with the Soviet Union or another major Communist State"
@@ -95,3 +96,16 @@
  
  KAS_AI_RANDOM_COMMUNISM:0 "Communism"
  KAS_AI_RANDOM_COMMUNISM_DESC:0 "Kashvan will try to turn Communist by going down the required path"
+ 
+ #AVA
+ AVA_AI_RANDOM_HISTORICAL:0 "Historical"
+ RULE_HISTORICAL_KAS_AI_DESC:0 "Avahya Historical"
+ 
+ AVA_AI_RANDOM_DEMOCRACY:0 "Democracy"
+ AVA_AI_RANDOM_DEMOCRACY_DESC:0 "blah blah break your currency and sell gold for land for the people"
+ 
+ AVA_AI_RANDOM_FASCISM:0 "Roya Ascendent"
+ AVA_AI_RANDOM_FASCISM_DESC:0 "ROya Was victorious"
+ 
+ KAS_AI_RANDOM_COMMUNISM:0 "Communism"
+ KAS_AI_RANDOM_COMMUNISM_DESC:0 "Avahya will try to turn Communist by going down the required path"
