--- a/localisation/replace/aml_countries_l_english.yml
+++ b/localisation/replace/aml_countries_l_english.yml
@@ -1992,8 +1992,8 @@
  KKA_monarchism_ADJ:0 "Kandam"
  KKA_mandalism_ADJ:0 "Kandam"
  KKA_islamist_ADJ:0 "Kandam"
- KAS_fascism:0 "Empire of Kashvan"
- KAS_fascism_DEF:0 "the Empire of Kashvan"
+ KAS_fascism:0 "Federal Republic of Kashvan"
+ KAS_fascism_DEF:0 "the Federal Republic of Kashvan"
  KAS_democratic:0 "Republic of Kashvan"
  KAS_democratic_DEF:0 "the Republic of Kashvan"
  KAS_neutrality:0 "Kashvan"
