--- a/localisation/aml_game_rules_l_english.yml
+++ b/localisation/aml_game_rules_l_english.yml
@@ -12,7 +12,7 @@
  HOU_AI_BEHAVIOR:0 "@HOU Republic of Houpo'e"
  TRS_AI_BEHAVIOR:0 "@TRS Trynsuyin"
  KLK_AI_BEHAVIOR:0 "@KLK Kalari"
- KAS_AI_BEHAVIOR:0 "@KAS Dual Emirate of Kashvan"
+ KAS_AI_BEHAVIOR:0 "@KAS Federal Republic of Kashvan"
  AVA_AI_BEHAVIOR:0 "@AVA Kingdom of Avhaya"
  
  #Atlantis Rules
