Stop changing the Tags

--- a/localisation/aml_countries_cosmetic_l_english.yml
+++ b/localisation/aml_countries_cosmetic_l_english.yml
@@ -32,14 +32,14 @@
  NIL_PRJ_duchy_azania:0 "Duchy of Azania"
  NIL_PRJ_duchy_azania_def:0 "the Duchy of Azania"
  
- SCP_ENG_autonomy_dominion:0 "Dominion of Scotia"
- SCP_ENG_autonomy_colony:0 "Scotia Confederation"
- SCP_ENG_autonomy_puppet:0 "Province of Scotia"
- SCP_ENG_autonomy_integrated_puppet:0 "British Scotia"
- SCP_ENG_autonomy_dominion_DEF:0 "the Dominion of Scotia"
- SCP_ENG_autonomy_colony_DEF:0 "the Scotian Confederation"
- SCP_ENG_autonomy_puppet_DEF:0 "the Province of Scotia"
- SCP_ENG_autonomy_integrated_puppet_DEF:0 "British Scotia"
+ MRR_ENG_autonomy_dominion:0 "Morrothia"
+ MRR_ENG_autonomy_colony:0 "Morrothian Confederation"
+ MRR_ENG_autonomy_puppet:0 "Province of Morrothia"
+ MRR_ENG_autonomy_integrated_puppet:0 "British Elysia"
+ MRR_ENG_autonomy_dominion_DEF:0 "Morrothia"
+ MRR_ENG_autonomy_colony_DEF:0 "the Morrothian Confederation"
+ MRR_ENG_autonomy_puppet_DEF:0 "the Province of Morrothia"
+ MRR_ENG_autonomy_integrated_puppet_DEF:0 "British Elyssia"
  
   
  SOK_SWE_autonomy_dominion:0 "Principality of Södrakors"
