--- a/localisation/replace/Greece_replace_l_english.yml
+++ b/localisation/replace/Greece_replace_l_english.yml
@@ -2,12 +2,12 @@
  STATE_459:0 "Kasera"
 
  # Tag names
- GRE_fascism:0 "Rhomaion Empire"
- GRE_fascism_DEF:0 "The Rhomaion Empire"
+ GRE_fascism:0 "Basileia ton Rhomaion"
+ GRE_fascism_DEF:0 "The Basileia ton Rhomaion"
  GRE_democratic:0 "Rhomaion Republic"
  GRE_democratic_DEF:0 "The Rhomaion  Republic"
- GRE_neutrality:0 "Basileia ton Rhomaion"
- GRE_neutrality_DEF:0 "The Basileia ton Rhomaion"
+ GRE_neutrality:0 "Rhomaion"
+ GRE_neutrality_DEF:0 "The Rhomaion"
  GRE_communism:0 "Aegean Federal Socialist Republic"
  GRE_communism_DEF:0 "The Aegean Federal Socialist Republic"
  GRE_fascism_ADJ:0 "Rhōmaîoi"
@@ -37,7 +37,7 @@
 
  
  # State Names
- STATE_49:0 "Boukellarion"
+ #STATE_49:0 "Boukellarion"
  STATE_164:0 "Dodekanisa"
  STATE_182:0 "Krete"
  STATE_183:0 "Kypros"
@@ -50,8 +50,8 @@
  STATE_341:0 "Thrace"
  STATE_342:0 "Kibyrrhaiotai"
  STATE_347:0 "Optimatoi"
- STATE_349:0 "Sebasteia"
- STATE_350:0 "Mesopotamia"
+ #STATE_349:0 "Sebasteia"
+ #STATE_350:0 "Mesopotamia"
  STATE_354:0 "Chaldia"
  STATE_731:0 "Southern Macedonia"
  STATE_797:0 "Constantinople"
