--- a/localisation/AVA_l_english.yml
+++ b/localisation/AVA_l_english.yml
@@ -62,36 +62,36 @@
  
  #COMMUNISM EVENT
  ava.1.t:0 "Mainland or War" #FRANCE GETS the Eventc
- ava.1.d:0 "Long Ignoble Speach or something"
+ ava.1.d:0 "Long Ignoble Speach or something" #OI WRITE SHIT
  ava.1.a:0 "Avahya Demand France Land" #France Accepts
  ava.1.b:0 "Avahya Demand France Land" #France Refuses
  ava.2.t:0 "France Gives Mainland" #Avahya GETS the Eventc
- ava.2.d:0 "Long speach or sumthin"
+ ava.2.d:0 "Long speach or sumthin" #OI WRITE SHIT
  ava.2.a:0 "Good we didnt want to fight"
  ava.4.t:0 "France Refuses" #Avahya GETS the Eventc
- ava.4.d:0 "We meet on the field of battle or sumthing"
+ ava.4.d:0 "We meet on the field of battle or sumthing" #OI WRITE SHIT
  ava.4.a:0 "Nothing like a little violence cant solve"
  
  ava.5.t:0 "Cardinal or War" #FRANCE GETS the Eventc
- ava.5.d:0 "Long Ignoble Speach or something"
+ ava.5.d:0 "Long Ignoble Speach or something" #OI WRITE SHIT
  ava.5.a:0 "Avahya Demand France Land" #France Accepts
  ava.5.b:0 "Avahya Demand France Land" #France Refuses
  ava.6.t:0 "France Gives Cardinal" #Avahya GETS the Eventc
- ava.6.d:0 "Long speach or sumthin"
- ava.6.a:0 "Good we didnt want to fight"
+ ava.6.d:0 "Long speach or sumthin" #OI WRITE SHIT
+ ava.6.a:0 "Good we didnt want to fight" 
  ava.7.t:0 "France Refuses" #Avahya GETS the Eventc
- ava.7.d:0 "We meet on the field of battle or sumthing"
+ ava.7.d:0 "We meet on the field of battle or sumthing" #OI WRITE SHIT
  ava.7.a:0 "Nothing like a little violence cant solve"
  
  ava.10.t:0 "Second War of Fire and Stone?" #FRANCE GETS the Eventc
- ava.10.d:0 "Long Ignoble Speach or something"
+ ava.10.d:0 "Long Ignoble Speach or something" #OI WRITE SHIT
  ava.10.a:0 "Avahya Demands all core" #France Accepts
  ava.10.b:0 "Avahya Demand  all core" #France Refuses
  ava.12.t:0 "France Gives all core" #Avahya GETS the Eventc
- ava.12.d:0 "Long speach or sumthin"
+ ava.12.d:0 "Long speach or sumthin" #OI WRITE SHIT
  ava.12.a:0 "Good we didnt want to fight"
  ava.14.t:0 "France Refuses" #Avahya GETS the Eventc
- ava.14.d:0 "We meet on the field of battle or sumthing"
+ ava.14.d:0 "We meet on the field of battle or sumthing" #OI WRITE SHIT
  ava.14.a:0 "Nothing like a little violence cant solve"
  
  AVA_conflicting_reports:0 "Conflicting Reports"
@@ -205,27 +205,27 @@
  AVA_learning_civil_war:0 "Civil War Lessons"
  AVA_learning_civil_war_desc:0 "The Civil war has shown us the fallices and flaws of our military strategy and our army, we should work on reforming our military to improve our ability to keep the country safe"
  AVA_reform_army:0 "Reform the Army"
- AVA_reform_army_desc:0 "The Army is woefully outdated, using outdated weapons and artillery. We need to reform military doctrine and weaponry in order to keep our sovereignty"
+ AVA_reform_army_desc:0 "The Army After the Civil War is in tatters but has learned alot about warfare in its 3 year trial by fire."
  AVA_firepower:0 "Firepower Focus"
- AVA_firepower_desc:0 "SSSSS"
+ AVA_firepower_desc:0 "Rivetna's plan- General Arzhan Rivetna is an experienced general from the Great War, his plan of firepower over manpower should be adopted as our main doctrine"
  AVA_infantry:0 "Infantry Advancements"
- AVA_infantry_desc:0 "SSSSS"
+ AVA_infantry_desc:0 "Upgrade the Krag- The Krag–Jørgensen, better known in Avahya as the (A93) is a bolt action rifle in service in Avahya since 1893, It's become very outdated over the years, we should upgrade it to make it more effective in combat."
  AVA_artillery:0 "Artillery Advancements"
- AVA_artillery_desc:0 "SSSSS"
+ AVA_artillery_desc:0 "Rāste Āhengar has spent the better part of our civil war relatively unharmed and as such was abed to produce improvements to our Artilery unimpeeded"
  AVA_support:0 "Support Elements"
- AVA_support_desc:0 "SSSSS"
+ AVA_support_desc:0 "Cirogamed Guild an Ancient company from 1547 receantly pivoted to the production of of Electrical Equiptment and shows promis with the masses, their Radio Equiptment is top notch in the company, it would be wise to aquire this modern equiptment for our armies"
  AVA_blitzkrieg:0 "Blitzkrieg Tactics"
- AVA_blitzkrieg_desc:0 "SSSSS"
+ AVA_blitzkrieg_desc:0 "Afsheri's plan- General Nimâ Afsheri is a relatively fresh face, but his exploits during the Civil war cannot go unnoticed, We should consider his plan of quick movements"
  AVA_grand_plan:0 "Grand Plan"
- AVA_grand_plan_desc:0 "SSSSS"
+ AVA_grand_plan_desc:0 "Rivetna's plan- General Arzhan Rivetna is an experienced general from the Great War, his plan of firepower over manpower has been modified to incorperate a much larger emphisas on crafting the perfect plans for our soldiers to follow."
  AVA_trucks:0 "Military Lorries"
- AVA_trucks_desc:0 "SSSSS"
+ AVA_trucks_desc:0 "Oxiustig Motor Designs pride of the Avahyan Car industry, while not competitive on the global Markets a sense of pride of owning a domestic vehical is what keeps them in buisness, by requesting new military trucks it would surely bolster their finances."
  AVA_tanks:0 "Tank Advancements"
- AVA_tanks_desc:0 "SSSSS"
+ AVA_tanks_desc:0 "Oxiustig Motor Designs has returned with new tank designs evolved from the Old British LAndship, we should put them to good use!"
  AVA_trains:0 "Trains"
- AVA_trains_desc:0 "SSSSS"
+ AVA_trains_desc:0 "Ayoxdyun Rail Company has requested several loans to repair our vart rail and streat car networks, we should accept their loan request if we wish to salvage our home situation"
  AVA_spec_ops:0 "Special Operations"
- AVA_spec_ops_desc:0 "SSSSS"
+ AVA_spec_ops_desc:0 "The height of our spec ops during the civil war need to be formalized into our military. Its the surefire way to "
  AVA_reform_navy:0 "Naval Reforms"
  AVA_reform_navy_desc:0 "Much of our navy was destroyed or damaged in the civil war, we need to rebuild our naval fleet in order to protect our waters and prevent any of our enemies from landing soldiers on our shores."
  AVA_purchase_british_ships:0 "Purchase British Ships"
@@ -233,7 +233,7 @@
  AVA_fleet_being:0 "Fleet in Being Doctrine"
  AVA_fleet_being_desc:0 "Having a large fleet is imposing, having the largest guns is powerful. By combining these two ideas, we can create a navy that the entire Lemurian ocean will fear."
  AVA_destroyer:0 "Destroyer Focus"
- AVA_destroyer_desc:0 "Destroyers are the backbone of any fleet, being multirole ships capable of just about anything we need. We should invest in them to ensure our larger ships can be well defended.
+ AVA_destroyer_desc:0 "Destroyers are the backbone of any fleet, being multirole ships capable of just about anything we need. We should invest in them to ensure our larger ships can be well defended."
  AVA_battleship:0 "Battleship Focus"
  AVA_battleship_desc:0 "Some in command say Battleships are becoming outdated, but in the Lemurian ocean the largest fleets only consist of cruisers, having Battleships will put the power of the region back into our hands."
  AVA_purchase_american_ships:0 "Purchase American Ships"
@@ -241,9 +241,11 @@
  AVA_base_strike:0 "Base Strike Doctrine"
  AVA_base_strike_desc:0 "The future is naval combat is not on the sea but in the air, we must invest in carriers and carrier planes to destroy our enemies' before they even leave their ports."
  AVA_battlecruiser:0 "Battlecruiser Focus"
- AVA_battlecruiser_desc:0 "A majestic combination of hulking battleships and agile cruisers, battlecruisers may serve a niche role, but they can be wonderful for fleets that may not need a battleship but still need a larger vessel.
+ AVA_battlecruiser_desc:0 "A majestic combination of hulking battleships and agile cruisers, battlecruisers may serve a niche role, but they can be wonderful for fleets that may not need a battleship but still need a larger vessel."
+ AVA_carrier:0 " First Carrier Experiments"
+ AVA_carrier_desc:0 "Our air force has shown to be a very useful portion of our armed forces, by giving our Naval forces the ability to strike targets from above we could improve their ability to fight."
  AVA_purchase_italian_ships:0 "Purchase Italian Ships"
- AVA_purchase_italian_ships_desc:0 "Italy has produced many ships since the
+ AVA_purchase_italian_ships_desc:0 "Italy has produced many ships since the"
  AVA_trade_war:0 "Trade War Doctrine"
  AVA_trade_war_desc:0 "The Lemurian ocean is vital in global trade, by investing in small, fast fleets we can catch enemy ships off gaurd and destroy them, starving our enemies no matter how far they are."
  AVA_cruiser:0 "Cruiser Focus"
@@ -257,15 +259,15 @@
  AVA_battlefield_support:0 "Battlefield Support"
  AVA_battlefield_support_desc:0 "Whilst the airforce may be essential in winning future conflicts, our army is still needed on the ground to engage the enemy directly, we should focus our air force on supporting our boots on the ground."
  AVA_operational_integrity:0 "Operational Integrity"
- AVA_operational_integrity_desc:0 "SSSSS"
+ AVA_operational_integrity_desc:0 "Our focus in the air should be on grinding down the enemy forces with copious amounts of high explosives from above."
  AVA_large_aircraft:0 "Large Airframe Focus"
- AVA_large_aircraft_desc:0 "SSSSS"
+ AVA_large_aircraft_desc:0 "Skenpihr Aviation has begun further research into Bomber Airframes."
  AVA_efficient_engines:0 "Efficient Engines"
- AVA_efficient_engines_desc:0 "SSSSS"
+ AVA_efficient_engines_desc:0 "Improvements in our precision have allowed for much better and efficient engines."
  AVA_larger_guns:0 "Larger Aircraft Armaments"
- AVA_larger_guns_desc:0 "SSSSS"
+ AVA_larger_guns_desc:0 "The bullets in our aircraft are too small we must increase the size to at the very minimum of 20mm rounds to effectivly pierce lightly armored targets on the ground and in the sky"
  AVA_medium_aircraft:0 "Medium Airframe Focus"
- AVA_medium_aircraft_desc:0 "SSSSS"
+ AVA_medium_aircraft_desc:0 "Skenpihr Aviation has begun further research into Medium Sized Airframes"
  AVA_small_aircraft:0 "Small Airframe Focus"
- AVA_small_aircraft_desc:0 "SSSSS"
+ AVA_small_aircraft_desc:0 "Skenpihr Aviation has begun further research into Fighter Airframes"
  
