--- a/localisation/AVA_l_english.yml
+++ b/localisation/AVA_l_english.yml
@@ -71,7 +71,7 @@
  ava.4.t:0 "France Refuses" #Avahya GETS the Eventc
  ava.4.d:0 "We meet on the field of battle or sumthing" #OI WRITE SHIT
  ava.4.a:0 "Nothing like a little violence cant solve"
- 
+ #COMMUNISM EVENT
  ava.5.t:0 "Cardinal or War" #FRANCE GETS the Eventc
  ava.5.d:0 "Long Ignoble Speach or something" #OI WRITE SHIT
  ava.5.a:0 "Avahya Demand France Land" #France Accepts
@@ -82,7 +82,7 @@
  ava.7.t:0 "France Refuses" #Avahya GETS the Eventc
  ava.7.d:0 "We meet on the field of battle or sumthing" #OI WRITE SHIT
  ava.7.a:0 "Nothing like a little violence cant solve"
- 
+ #ROYA EVENT
  ava.10.t:0 "Second War of Fire and Stone?" #FRANCE GETS the Eventc
  ava.10.d:0 "Long Ignoble Speach or something" #OI WRITE SHIT
  ava.10.a:0 "Avahya Demands all core" #France Accepts
