--- a/localisation/KAS_l_english.yml
+++ b/localisation/KAS_l_english.yml
@@ -65,7 +65,7 @@
  kas.1.t:0 "Strip or War" #FRANCE GETS the Eventc
  kas.1.d:0 "'For too long the feet of the Europeans have tread upon our sacred land. No more! The shall return what rightfully belongs to us or will face dreadful consequences!' -Petela Witmeri, First President of Kashvan."
  kas.1.a:0 "France Accepts" #France Accepts
- kas.1.b:0 "France Accepts" #France Refuses
+ kas.1.b:0 "France Refuses" #France Refuses
  kas.2.t:0 "France Cedes the Strip" #KAsh GETS the Eventc
  kas.2.d:0 "Instead of plunging the world into another blood and unneccessary conflict, France has wisely decided to return the Kobaulashlivi Strip to its rightful owners, Kashvan."
  kas.2.a:0 "To avoid conflict is best."
@@ -75,8 +75,8 @@
  
  kas.6.t:0 "Vassalization or War" #Aka GETS the Eventc
  kas.6.d:0 "Akamatuli has long been the home of wild and ferocious tribes. We will give them the opportunity to join our glorious union and see the light of civilization!"
- kas.6.a:0 "Kashvan demands our submission." #AkaAka Accepts
- kas.6.b:0 "Shall we accept the Kashvani offer?" #Aka Refuses
+ kas.6.a:0 "We accept the Kashvani offer?"" #AkaAka Accepts
+ kas.6.b:0 "Kashvan demands our submission? They will need alot of red water." #Aka Refuses
  kas.8.t:0 "Akamatuli Accepts" #KAsh GETS the Eventc
  kas.8.d:0 "Our common background and shared blood are what is most important. We shall join with the Kashvan people and lift all our peoples."
  kas.8.a:0 "Good we didnt wan't to fight"
