--- a/localisation/AVA_l_english.yml
+++ b/localisation/AVA_l_english.yml
@@ -62,36 +62,36 @@
  
  #COMMUNISM EVENT
  ava.1.t:0 "Mainland or War" #FRANCE GETS the Eventc
- ava.1.d:0 "Long Ignoble Speach or something" #OI WRITE SHIT
- ava.1.a:0 "Avahya Demand France Land" #France Accepts
- ava.1.b:0 "Avahya Demand France Land" #France Refuses
+ ava.1.d:0 "The Commune of Avahya is Demanding the Return of the northern Pantiya, a land we fought for nearly 60 years ago, is it wise to return them to communist state?" #OI WRITE SHIT
+ ava.1.a:0 "We shall return the land, it has only brought tnothing but difficulty" #France Accepts
+ ava.1.b:0 "Avahya has no right demanding anything of France." #France Refuses
  ava.2.t:0 "France Gives Mainland" #Avahya GETS the Eventc
- ava.2.d:0 "Long speach or sumthin" #OI WRITE SHIT
+ ava.2.d:0 "The workers of the mainland have finally been Returned, The Revolution will be spread across Lemuria but our own territorial integrity is still at risk the Cardinal Island still stands as a thorn in our rears" #OI WRITE SHIT
  ava.2.a:0 "Good we didnt want to fight"
  ava.4.t:0 "France Refuses" #Avahya GETS the Eventc
- ava.4.d:0 "We meet on the field of battle or sumthing" #OI WRITE SHIT
+ ava.4.d:0 "The Workers of Avahya Demand the rightful return of its homelands, and the will of the people will not be stopped becauseanother nation says so. If it must be returned by force so be it." #OI WRITE SHIT
  ava.4.a:0 "Nothing like a little violence cant solve"
  #COMMUNISM EVENT
  ava.5.t:0 "Cardinal or War" #FRANCE GETS the Eventc
- ava.5.d:0 "Long Ignoble Speach or something" #OI WRITE SHIT
- ava.5.a:0 "Avahya Demand France Land" #France Accepts
- ava.5.b:0 "Avahya Demand France Land" #France Refuses
+ ava.5.d:0 "The Commune of Avahya is Demanding the Return of the Reuinion, our plan to counter Avahyan Influence hinges on Reuinion, We shouldnt give it away" #OI WRITE SHIT
+ ava.5.a:0 "We have bigger problems in europe, return the island" #France Accepts
+ ava.5.b:0 "It a shame it has come to this, to war men!" #France Refuses
  ava.6.t:0 "France Gives Cardinal" #Avahya GETS the Eventc
- ava.6.d:0 "Long speach or sumthin" #OI WRITE SHIT
+ ava.6.d:0 "The workers of the cardinal island have finally been Returned, The Revolution is no longer at serious risk of being destroyed. The Indolemurian trade lanes will surely assist in funding the revolution far and wide." #OI WRITE SHIT
  ava.6.a:0 "Good we didnt want to fight" 
  ava.7.t:0 "France Refuses" #Avahya GETS the Eventc
- ava.7.d:0 "We meet on the field of battle or sumthing" #OI WRITE SHIT
+ ava.7.d:0 "The Cardinal Islands will be returned to us, we can not have a massive security risk in the south. The cardinal islands were used to take the Mainland, It will be used to quash the revolution. This Can Not Stand!" #OI WRITE SHIT
  ava.7.a:0 "Nothing like a little violence cant solve"
  #ROYA EVENT
  ava.10.t:0 "Second War of Fire and Stone?" #FRANCE GETS the Eventc
- ava.10.d:0 "Long Ignoble Speach or something" #OI WRITE SHIT
- ava.10.a:0 "Avahya Demands all core" #France Accepts
- ava.10.b:0 "Avahya Demand  all core" #France Refuses
+ ava.10.d:0 "In 1870 we declared war on Avahya for the rest of the West Lemurian coast, it cost us dearly but we were victorious, now their new Ruler is demanding the return of those lands, with the situation in europe as tense as it is can we really afford another over seas war?" #OI WRITE SHIT
+ ava.10.a:0 "We will transfer over all territories." #France Accepts
+ ava.10.b:0 "Avahya will not tell us what to do" #France Refuses
  ava.12.t:0 "France Gives all core" #Avahya GETS the Eventc
- ava.12.d:0 "Long speach or sumthin" #OI WRITE SHIT
- ava.12.a:0 "Good we didnt want to fight"
+ ava.12.d:0 "At long last without firing a single shot the mainland of our great nation has been restored to us. A long and prosperous future awaits. Soon the reclaimation of persia will be upon us, and we will finally right the wrong of history." #OI WRITE SHIT
+ ava.12.a:0 "Truly a miracle in diplomacy"
  ava.14.t:0 "France Refuses" #Avahya GETS the Eventc
- ava.14.d:0 "We meet on the field of battle or sumthing" #OI WRITE SHIT
+ ava.14.d:0 "Frances Refusal to hand over the mainland will only delay the plans, Persia will return to us but first own own home must be siezed! Sixty Years too long, france will pay in blood sweat and tears as their empire turns to dust." #OI WRITE SHIT
  ava.14.a:0 "Nothing like a little violence cant solve"
  
  AVA_conflicting_reports:0 "Conflicting Reports"
