Some, but not all loc fixes

--- a/localisation/aml_countries_cosmetic_l_english.yml
+++ b/localisation/aml_countries_cosmetic_l_english.yml
@@ -39,7 +39,7 @@
  MRR_ENG_autonomy_dominion_DEF:0 "Morrothia"
  MRR_ENG_autonomy_colony_DEF:0 "the Morrothian Confederation"
  MRR_ENG_autonomy_puppet_DEF:0 "the Province of Morrothia"
- MRR_ENG_autonomy_integrated_puppet_DEF:0 "British Elyssia"
+ MRR_ENG_autonomy_integrated_puppet_DEF:0 "British Elysia"
  
   
  SOK_SWE_autonomy_dominion:0 "Principality of Södrakors"
