--- a/localisation/replace/Greece_replace_l_english.yml
+++ b/localisation/replace/Greece_replace_l_english.yml
@@ -5,9 +5,9 @@
  GRE_fascism:0 "Basileia ton Rhomaion"
  GRE_fascism_DEF:0 "The Basileia ton Rhomaion"
  GRE_democratic:0 "Rhomaion Republic"
- GRE_democratic_DEF:0 "The Rhomaion  Republic"
+ GRE_democratic_DEF:0 "The Rhomaion Republic"
  GRE_neutrality:0 "Rhomaion"
- GRE_neutrality_DEF:0 "The Rhomaion"
+ GRE_neutrality_DEF:0 "Rhomaion"
  GRE_communism:0 "Aegean Federal Socialist Republic"
  GRE_communism_DEF:0 "The Aegean Federal Socialist Republic"
  GRE_fascism_ADJ:0 "Rhōmaîoi"
